--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
             <a href="projects/project1.html"
               ><img src="images\projects\project1\home.jpg" alt="Project-1"
             /></a>
+            <a href="projects/project7.html" class="link"
+              ><h3>AeliusCase</h3></a
+            >
+            <a href="projects/project7.html" class="link"
+              ><h5>
+                Technologies : Angular, .Net, MYSQL, PrimeNg, IIS Server
+              </h5></a
+            >
+            <p>
+              Web applicaqtion to streamline core legal operations.
+            </p>
+          </div>
+          <div class="project">
+            <a href="projects/project1.html"
+              ><img src="images\projects\project1\home.jpg" alt="Project-1"
+            /></a>
             <a href="projects/project1.html" class="link"
               ><h3>BeezForecast</h3></a
             >
